--- a/html/index.html
+++ b/html/index.html
@@ -50,7 +50,9 @@
 
 	<body>
 
-			<!--Début bloc général-->
+		<!--Enlever les séparateurs-->	
+		
+		<!--Début bloc général-->
 
 			<div id="bloc_page">
 
